# PyHAB

./: DEVELOPER.md  README.md  pyproject.toml  tox.ini
asymptomatic/: __init__.py  equation.py  symbol_table.py
book/: Scratchpad.ipynb  _config.yml  _toc.yml  atmosphere.ipynb  burst.ipynb  descent.ipynb  notes.md  preamble.py  symbols.py
docs/: .buildinfo  Scratchpad.html  atmosphere.html  burst.html  descent.html  genindex.html  index.html  notes.html  objects.inv  search.html  searchindex.js  terminology.html
docs/_sources/: atmosphere.ipynb  descent.ipynb  index.md  terminology.ipynb
pyhab/: __init__.py  model.py
symple/: __init__.py
tests/: test_pyhab.py
